# lantern

./: .gitignore  AGENT.md  ARCHITECTURE.md  CURRENTLY_WORKING.md  FEATURES.md  LIVE_MESH_PLAN.md  MESH_ENHANCEMENT_PLAN.md  OBJECT_TRACKING_PLAN.md  QNN_RUNTIME_PLAN.md  QNN_SETUP.md  README.md  REPO_STATUS.md  RESPONSIBILITIES.md  SCANNING_UX_PROMPT.md  STORYTELLING.md  VERIFY.md  analyze_session.py  android_session_to_pipeline.py  box_complete.py  build.gradle.kts  cad_check.py  charuco_pose.py  convert_session.py  cuboid_fit.py  depth_anything_v3.py  depth_model.py  export_da3_executorch.py  export_da3_mv_executorch.py  ground_truth.py  import_and_clean.py  inhand_tracker.py  multiview_da3_to_mesh.py  object_frame.py  offline_mesh.py  orientation_test.sh  partition_report.txt  pipeline_float.py  profile_depth.py  pull_session.sh  requirements-da3.txt  (+7 more)
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  qnn_depth.cpp
arcore/: capture.json  frame-000000.pose.txt  frame-000001.pose.txt  frame-000002.pose.txt  frame-000003.pose.txt  frame-000004.pose.txt  frame-000005.pose.txt  frame-000006.pose.txt  frame-000007.pose.txt  frame-000008.pose.txt  frame-000009.pose.txt  frame-000010.pose.txt  frame-000011.pose.txt  frame-000012.pose.txt  frame-000013.pose.txt  frame-000014.pose.txt  frame-000015.pose.txt  frame-000016.pose.txt  frame-000017.pose.txt  frame-000018.pose.txt  frame-000019.pose.txt  frame-000020.pose.txt  frame-000021.pose.txt  frame-000022.pose.txt  frame-000023.pose.txt  frame-000024.pose.txt  intrinsics.txt
demo/: README.md  (+5 more)
(+160 files in other folders)
